implemented numberOfDigits function for use in error handling and possibly other areas

--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -31,7 +31,8 @@ CXXFLAGS += -g -Wall -Wextra
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
 TESTS = matrix2x2_unittest \
-				exception_unittest
+				exception_unittest \
+				num_digits_unittest
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -73,8 +74,18 @@ gtest_main.a : gtest-all.o gtest_main.o
 # gtest_main.a, depending on whether it defines its own main()
 # function.
 
-feq.o : $(SRC_DIR)feq.cpp
+feq.o : $(SRC_DIR)feq.cpp $(SRC_DIR)feq.h
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(SRC_DIR)feq.cpp
+
+num_digits.o : $(SRC_DIR)num_digits.cpp $(SRC_DIR)num_digits.h $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(SRC_DIR)num_digits.cpp
+
+num_digits_unittest.o : $(TEST_DIR)num_digits_unittest.cpp $(SRC_DIR)num_digits.h \
+												$(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)num_digits_unittest.cpp
+
+num_digits_unittest : num_digits.o num_digits_unittest.o gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
 
 matrix2x2.o : $(SRC_DIR)matrix2x2.cpp $(SRC_DIR)matrix2x2.h $(SRC_DIR)feq.h \
 							$(GTEST_HEADERS)
@@ -92,5 +103,5 @@ exception_unittest.o : $(TEST_DIR)exception_unittest.cpp \
                      $(SRC_DIR)exception.h $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)exception_unittest.cpp
 
-exception_unittest : exception_unittest.o gtest_main.a
+exception_unittest : exception_unittest.o num_digits.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
