Moved all gtest files into Rigid2D/gtest.  Modified Makefile so that compiler will find new location of headers

--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -14,7 +14,7 @@
 
 # Points to the root of Google Test, relative to where this file is.
 # Remember to tweak this if you move this file.
-GTEST_DIR = /home/dustin/opt/gtest-1.6.0
+GTEST_DIR = ../../../gtest
 
 # Where to find source code relative to this file.
 SRC_DIR = ../
