--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -32,7 +32,6 @@ CXXFLAGS += -g -Wall -Wextra
 # created to the list.
 TESTS = matrix2x2_unittest \
 				rigid_exception_unittest \
-				num_digits_unittest
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -77,16 +76,6 @@ gtest_main.a : gtest-all.o gtest_main.o
 feq.o : $(SRC_DIR)feq.cpp $(SRC_DIR)feq.h
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(SRC_DIR)feq.cpp
 
-num_digits.o : $(SRC_DIR)num_digits.cpp $(SRC_DIR)num_digits.h $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(SRC_DIR)num_digits.cpp
-
-num_digits_unittest.o : $(TEST_DIR)num_digits_unittest.cpp $(SRC_DIR)num_digits.h \
-												$(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)num_digits_unittest.cpp
-
-num_digits_unittest : num_digits.o num_digits_unittest.o gtest_main.a
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
-
 matrix2x2.o : $(SRC_DIR)matrix2x2.cpp $(SRC_DIR)matrix2x2.h $(SRC_DIR)feq.h \
 							$(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(SRC_DIR)matrix2x2.cpp
@@ -106,5 +95,5 @@ rigid_exception_unittest.o : $(TEST_DIR)rigid_exception_unittest.cpp \
                      $(SRC_DIR)rigid_exception.h $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)rigid_exception_unittest.cpp
 
-rigid_exception_unittest : rigid_exception_unittest.o rigid_exception.o num_digits.o gtest_main.a
+rigid_exception_unittest : rigid_exception_unittest.o rigid_exception.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
