Expended Vector3 and added limited testing

--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -30,7 +30,8 @@ CXXFLAGS += -g -Wall -Wextra
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
-TESTS = matrix2x2_unittest
+TESTS = matrix2x2_unittest \
+        vector3_unittest
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -86,3 +87,14 @@ matrix2x2_unittest.o : $(TEST_DIR)matrix2x2_unittest.cpp $(SRC_DIR)feq.h \
 
 matrix2x2_unittest : matrix2x2.o matrix2x2_unittest.o feq.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
+
+  
+vector3_unittest.o : $(TEST_DIR)vector3_unittest.cpp $(SRC_DIR)feq.h \
+                     $(SRC_DIR)vector3.h $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)vector3_unittest.cpp
+
+
+vector3_unittest : vector3_unittest.o feq.o gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
+
+
