Cleaned up Vector2.h so it would compile.  Changed float to Real, removed trailin white space, and constructed simple test file that needs to be completed later

--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -33,7 +33,8 @@ CXXFLAGS += -g -Wall -Wextra
 # created to the list.
 TESTS = Matrix2-UnitTest \
 				RigidException-UnitTest \
-        Vector3-UnitTest
+        Vector3-UnitTest \
+        Vector2-UnitTest
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -104,6 +105,13 @@ Vector3-UnitTest.o : $(TEST_DIR)Vector3-UnitTest.cpp $(SRC_DIR)feq.h \
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)Vector3-UnitTest.cpp
 
 Vector3-UnitTest : Vector3-UnitTest.o feq.o gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
+
+Vector2-UnitTest.o : $(TEST_DIR)Vector2-UnitTest.cpp $(SRC_DIR)feq.h \
+                     $(SRC_DIR)Vector2.h $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(TEST_DIR)Vector2-UnitTest.cpp
+
+Vector2-UnitTest : Vector2-UnitTest.o feq.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
 
 
