Fixed Makefile issue

--- a/include/Common/Tests/Makefile
+++ b/include/Common/Tests/Makefile
@@ -17,7 +17,7 @@
 GTEST_DIR = ../../../gtest
 
 # Where to find source code relative to this file.
-SRC_DIR = ../
+COMMON_DIR = ../
 
 # Where to find test code relative to this file
 TEST_DIR =
@@ -30,7 +30,7 @@ INCLUDE_DIR = $(ROOT_DIR)include/
 # Flags passed to the preprocessor.
 CPPFLAGS += -I$(ROOT_DIR)gtest/include \
 						-I$(INCLUDE_DIR) \
-						-I$(SRC_DIR) \
+						-I$(COMMON_DIR) \
 
 # Flags passed to the C++ compiler.
 CXXFLAGS += -g -Wall -Wextra
@@ -59,7 +59,7 @@ LINK = $(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@
 all : $(TESTS)
 
 clean :
-	rm -f $(TESTS) gtest.a gtest_main.a *.o
+	rm -f $(TESTS) gtest.a gtest_main.a *.o *.gch
 
 # Builds gtest.a and gtest_main.a.
 
@@ -89,58 +89,58 @@ gtest_main.a : gtest-all.o gtest_main.o
 # gtest_main.a, depending on whether it defines its own main()
 # function.
 
-feq.o : $(SRC_DIR)feq.cpp $(SRC_DIR)feq.h
-	$(COMPILE) $(SRC_DIR)feq.cpp
+feq.o : $(COMMON_DIR)feq.cpp $(COMMON_DIR)feq.h
+	$(COMPILE) $(COMMON_DIR)feq.cpp
 
-Matrix2.h : $(SRC_DIR)RigidSettings.h $(SRC_DIR)feq.h
+Matrix2.h : $(COMMON_DIR)RigidSettings.h $(COMMON_DIR)feq.h
 
-Matrix2.o : $(SRC_DIR)Matrix2.cpp $(SRC_DIR)Matrix2.h $(GTEST_HEADERS)
-	$(COMPILE) $(SRC_DIR)Matrix2.cpp
+Matrix2.o : $(COMMON_DIR)Matrix2.cpp $(COMMON_DIR)Matrix2.h $(GTEST_HEADERS)
+	$(COMPILE) $(COMMON_DIR)Matrix2.cpp
 
-Matrix2-UnitTest.o : $(TEST_DIR)Matrix2-UnitTest.cpp $(SRC_DIR)Matrix2.h $(GTEST_HEADERS)
+Matrix2-UnitTest.o : $(TEST_DIR)Matrix2-UnitTest.cpp $(COMMON_DIR)Matrix2.h $(GTEST_HEADERS)
 	$(COMPILE) $(TEST_DIR)Matrix2-UnitTest.cpp
 
 Matrix2-UnitTest : Matrix2.o Matrix2-UnitTest.o feq.o gtest_main.a
 	$(LINK)
 
-RigidException.o : $(SRC_DIR)RigidException.cpp $(SRC_DIR)RigidException.h $(GTEST_HEADERS)
-	$(COMPILE) $(SRC_DIR)RigidException.cpp
+RigidException.o : $(COMMON_DIR)RigidException.cpp $(COMMON_DIR)RigidException.h $(GTEST_HEADERS)
+	$(COMPILE) $(COMMON_DIR)RigidException.cpp
 
 RigidException-UnitTest.o : $(TEST_DIR)RigidException-UnitTest.cpp \
-                     $(SRC_DIR)RigidException.h $(GTEST_HEADERS)
+                     $(COMMON_DIR)RigidException.h $(GTEST_HEADERS)
 	$(COMPILE) $(TEST_DIR)RigidException-UnitTest.cpp
 
 RigidException-UnitTest : RigidException-UnitTest.o RigidException.o gtest_main.a
 	$(LINK)
 
-Vector3.h : $(SRC_DIR)RigidSettings.h $(SRC_DIR)feq.h
+Vector3.h : $(COMMON_DIR)RigidSettings.h $(COMMON_DIR)feq.h
 
-Vector3-UnitTest.o : $(TEST_DIR)Vector3-UnitTest.cpp $(SRC_DIR)Vector3.h $(GTEST_HEADERS)
+Vector3-UnitTest.o : $(TEST_DIR)Vector3-UnitTest.cpp $(COMMON_DIR)Vector3.h $(GTEST_HEADERS)
 	$(COMPILE) $(TEST_DIR)Vector3-UnitTest.cpp
 
 Vector3-UnitTest : Vector3-UnitTest.o feq.o gtest_main.a
 	$(LINK)
 
-Vector2.h : $(SRC_DIR)RigidSettings.h $(SRC_DIR)feq.h
+Vector2.h : $(COMMON_DIR)RigidSettings.h $(COMMON_DIR)feq.h
 
-Vector2-UnitTest.o : $(TEST_DIR)Vector2-UnitTest.cpp $(SRC_DIR)Vector2.h $(GTEST_HEADERS)
+Vector2-UnitTest.o : $(TEST_DIR)Vector2-UnitTest.cpp $(COMMON_DIR)Vector2.h $(GTEST_HEADERS)
 	$(COMPILE) $(TEST_DIR)Vector2-UnitTest.cpp
 
 Vector2-UnitTest : Vector2-UnitTest.o feq.o gtest_main.a
 	$(LINK)
 
-OdeRungeKutta4.o : $(SRC_DIR)OdeRungeKutta4.h $(SRC_DIR)OdeRungeKutta4.cpp \
-									 $(SRC_DIR)OdeSolver.h $(SRC_DIR)RigidSettings.h \
-									 $(SRC_DIR)RigidException.h
-	$(COMPILE) $(SRC_DIR)OdeRungeKutta4.cpp
+OdeRungeKutta4.o : $(COMMON_DIR)OdeRungeKutta4.h $(COMMON_DIR)OdeRungeKutta4.cpp \
+									 $(COMMON_DIR)OdeSolver.h $(COMMON_DIR)RigidSettings.h \
+									 $(COMMON_DIR)RigidException.h
+	$(COMPILE) $(COMMON_DIR)OdeRungeKutta4.cpp
 
-ForceFunctions.h : $(SRC_DIR)RigidSettings.h
+ForceFunctions.h : $(COMMON_DIR)RigidSettings.h
 
 ForceFunctions.o : ForceFunctions.cpp ForceFunctions.h
 	$(COMPILE) ForceFunctions.cpp
 
-OdeRungeKutta4-UnitTest.o : OdeRungeKutta4-UnitTest.cpp $(SRC_DIR)OdeRungeKutta4.h \
-													 	$(SRC_DIR)OdeSolver.h $(SRC_DIR)feq.h ForceFunctions.h $(GTEST_HEADERS)
+OdeRungeKutta4-UnitTest.o : OdeRungeKutta4-UnitTest.cpp $(COMMON_DIR)OdeRungeKutta4.h \
+													 	$(COMMON_DIR)OdeSolver.h $(COMMON_DIR)feq.h ForceFunctions.h $(GTEST_HEADERS)
 	$(COMPILE) OdeRungeKutta4-UnitTest.cpp
 
 OdeRungeKutta4-UnitTest : OdeRungeKutta4-UnitTest.o OdeRungeKutta4.o \
