--- a/include/Objects/Tests/Makefile
+++ b/include/Objects/Tests/Makefile
@@ -37,7 +37,7 @@ CPPFLAGS += -I$(GTEST_DIR)/include 	\
 						-I$(COMMON_DIR)
 
 # Flags passed to the C++ compiler.
-CXXFLAGS += -g -Wall -Wextra
+CXXFLAGS += -g -Wall -Wextra -std=c++0x
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
