Fixed problem allowing user to set momentum without recalculating velocity

--- a/include/Objects/Tests/Makefile
+++ b/include/Objects/Tests/Makefile
@@ -95,8 +95,9 @@ feq.o : $(COMMON_DIR)feq.cpp $(COMMON_DIR)feq.h
 MathUtils.o : $(COMMON_DIR)MathUtils.cpp $(COMMON_DIR)MathUtils.h
 	$(COMPILE) $(COMMON_DIR)MathUtils.cpp
 
-RigidBody.o : $(SRC_DIR)RigidBody.h $(COMMON_DIR)RigidSettings.h  \
-					    $(COMMON_DIR)MathUtils.h $(COMMON_DIR)Vector2.h
+RigidBody.o : $(SRC_DIR)RigidBody.h $(SRC_DIR)RigidBody.cpp \
+							$(COMMON_DIR)RigidSettings.h $(COMMON_DIR)MathUtils.h \
+							$(COMMON_DIR)Vector2.h
 	$(COMPILE) $(SRC_DIR)RigidBody.cpp
 
 RigidBody-UnitTest.o : $(SRC_DIR)RigidBody.h RigidBody-UnitTest.cpp $(GTEST_HEADERS)
